<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroHHT</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">AndroHHT</string>
    <string name="add_new_profile">Add a new profile</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="nav_section0">Home</string>
    <string name="nav_section1">Check / Adjust Stock Quantity</string>
    <string name="nav_section2">View/Edit product</string>
    <string name="nav_section3">Price check / markdown</string>
    <string name="nav_section4">Create new product</string>
    <string name="nav_section5">Stock-take mode</string>
    <string name="nav_section6">Edit profile</string>
    <string name="nav_section7">Logout</string>
    <string name="nav_section8">Add picture</string>
    <string name="nav_section9">Add category</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_androhht">welcome to AndroHHT!</string>
    <string name="welcome_to_androhht_desc">Swipe left to right to show the menu...</string>
    <string name="scan_with_built_in_camera">Scan with built in camera...</string>
    <string name="barcode_hint">Barcode</string>
    <string name="scanner_activity">Scan barcode</string>
    <string name="barcode_product_id">Barcode / Product ID: </string>
    <string name="txt_no_profiles">Please create a profile, before continuing...</string>
    <string name="title_activity_add_edit__profile">AddEdit_Profile</string>
    <string name="hello_world">Hello world!</string>
    <string name="you_will_be_asked">You will be asked for the passcode every time you log in!</string>
    <string name="this_app_uses_rest">This app uses REST for communication with a store\'s web service</string>
    <string name="discard">Discard</string>
    <string name="accept">Accept</string>
    <string name="scan">Scan</string>
    <string name="password">Password</string>
    <string name="confirm_credentials">Confirm credentials:</string>
    <string name="must_provide_password">You must provide a password!</string>
    <string name="password_incorrect">Password incorrect!</string>
    <string name="password_dont_match">Passwords don\'t match!</string>
    <string name="oauth_unsuc">OAuth authentication unsuccessful!</string>
    <string name="search">Search</string>
    <string name="no_network">No Internet connection!</string>
    <string name="multiple_items_found">Multiple items found</string>
    <string name="retrieve">Retrieve</string>
    <string-array name="welcome_context">
        <item>Login</item>
        <item>Edit</item>
        <item>Delete</item>
    </string-array>



</resources>
