<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:minWidth="120dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/scan_with_built_in_camera"
        android:id="@+id/txt_scan_with_built_in_camera"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/edit_barcode_scan"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Barcode"
        android:layout_marginTop="5dp"
        android:focusable="true"
        android:enabled="true"
        android:numeric="integer"
        android:minHeight="50dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Scan!"
        android:id="@+id/btn_Scan"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:minWidth="100dp"
        android:minHeight="60dp"
        android:layout_marginTop="5dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/retrieve"
        android:id="@+id/btn_scan_retrieve"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="20dp"
        android:singleLine="false" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="...or search using Product Name"
        android:id="@+id/txt_or_search_with_product_id"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:ems="10"
        android:id="@+id/edit_product_id"
        android:layout_gravity="bottom|center_horizontal"
        android:clickable="true"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="Product Name"
        android:minHeight="50dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btn_search_by_id"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp" />

</LinearLayout>