<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context="com.kwiatkowski.androhht.androhht.AddEdit_Profile">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        android:textColor="#ff0ba4dc"
        android:textStyle="bold"
        android:textSize="50sp"
        android:gravity="center"
        android:text="@string/dummy_content" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <FrameLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/scrollView" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="left">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_Profile_Name"
                    android:layout_gravity="left|center_horizontal"
                    android:hint="Profile name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/off_white_text"
                    android:maxLines="1"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/you_will_be_asked"
                    android:id="@+id/txt_you_will_be_asked"
                    android:layout_gravity="left"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/off_white_text" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_Passcode"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:hint="PassCode"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:password="true"
                    android:singleLine="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/edit_Passcode_Confirm"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_gravity="center_horizontal"
                    android:hint="Confirm PassCode"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:password="true"
                    android:singleLine="true" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/this_app_uses_rest"
                    android:id="@+id/txt_this_app_uses_rest"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:textColor="@color/off_white_text" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_WebService_URL"
                    android:hint="Web Service URL"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:maxLines="1"
                    android:singleLine="false"
                    android:phoneNumber="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_Cons_Key"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:hint="API Consumer Key"
                    android:maxLines="1"
                    android:singleLine="false" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_Cons_Secret"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginRight="10dp"
                    android:hint="API Consumer Secret"
                    android:maxLines="1"
                    android:singleLine="false" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <EditText
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/edit_LangID"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_gravity="left"
                        android:hint="Language ID"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:visibility="gone" />

                    <EditText
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/edit_CurrencyID"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="5dp"
                        android:hint="Currency ID"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:visibility="gone" />
                </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <LinearLayout android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/discard"
                android:id="@+id/btn_add_edit_discard"
                android:layout_gravity="left" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/scan"
                android:id="@+id/btn_add_edit_scan"
                android:layout_marginLeft="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:singleLine="false"
                android:enabled="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept"
                android:id="@+id/btn_add_edit_accept"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:singleLine="false"
                android:enabled="true" />
        </LinearLayout>

    </FrameLayout>

</FrameLayout>
